wip-MDL-25512 Correct CSS rules in Canvas theme to align with YUI3 CSS Fonts

--- a/theme/canvas/style/text.css
+++ b/theme/canvas/style/text.css
@@ -1,163 +1,158 @@
 /* Text Elements 
 --------------------------*/
 
-body {
-	font-size: 85%;
-	line-height: 1.4;
-}
-
-body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea {
-	font-family: Helvetica, Arial, sans-serif;
+h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea {
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 h1,h2,h3,h4,h5,h6 {
-	font-weight: bold;
-	margin: 0;
+    font-weight: bold;
+    margin: 0;
 }
 
 h2.main,h3.main,h4.main {
-	text-align: center;
-	padding: 0.5em 0 1em;
-	margin: 0;
+    text-align: center;
+    padding: 0.5em 0 1em;
+    margin: 0;
 }
 
 h1 {
-	font-size: 2.25em;
-	line-height: 1;
-	margin-bottom: 0.5em;
+    font-size: 2.25em;
+    line-height: 1;
+    margin-bottom: 0.5em;
 }
 
 h2 {
-	font-size: 1.5em;
-	margin-bottom: 0.5em;
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
 }
 
 h3 {
-	font-size: 1.25em;
-	line-height: 1;
-	margin-bottom: 0.5em;
+    font-size: 1.25em;
+    line-height: 1;
+    margin-bottom: 0.5em;
 }
 
 h4 {
-	font-size: 1.1em;
-	line-height: 1.25;
-	margin-bottom: 0.75em;
+    font-size: 1.1em;
+    line-height: 1.25;
+    margin-bottom: 0.75em;
 }
 
 h5 {
-	font-size: 1em;
-	margin-bottom: 1em;
+    font-size: 1em;
+    margin-bottom: 1em;
 }
 
 h6 {
-	font-size: 1em;
+    font-size: 1em;
 }
 
 p {
-	margin: 0 0 1em;
+    margin: 0 0 1em;
 }
 
 ul, ol {
-	margin: 0 1.5em 1.5em 1.5em;
+    margin: 0 1.5em 1.5em 1.5em;
 }
 
 ul {
-	list-style-type: circle;
+    list-style-type: circle;
 }
 
 ol {
-	list-style-type: decimal;
+    list-style-type: decimal;
 }
 
 dl {
-	margin: 0 0 1.5em 0;
+    margin: 0 0 1.5em 0;
 }
 
 dl dt {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 dl dd {
-	margin-left: 1.5em;
+    margin-left: 1.5em;
 }
 
 abbr, acronym {
-	border-bottom: 1px dotted #000;
+    border-bottom: 1px dotted #000;
 }
 
 address {
-	margin-top: 1.5em;
-	font-style: italic;
+    margin-top: 1.5em;
+    font-style: italic;
 }
 
 del {
-	color: #000;
+    color: #000;
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 blockquote {
-	margin: 1.5em;
+    margin: 1.5em;
 }
 
 strong {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 em, dfn {
-	font-style: italic;
+    font-style: italic;
 }
 
 dfn {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 pre, code {
-	white-space: pre;
+    white-space: pre;
 }
 
 pre, code, tt {
-	font: 1.2em monospace;
-	line-height: 1.5;
-	margin: 1.5em 0;
+    font: 1.2em monospace;
+    line-height: 1.5;
+    margin: 1.5em 0;
 }
 
 .small {
-	font-size: .8em;
-	margin-bottom: 1.875em;
-	line-height: 1.875em;
+    font-size: .8em;
+    margin-bottom: 1.875em;
+    line-height: 1.875em;
 }
 
 .large {
-	font-size: 1.25em;
-	line-height: 1.5em;
-	margin-bottom: 1em;
+    font-size: 1.25em;
+    line-height: 1.5em;
+    margin-bottom: 1em;
 }
 
 .quiet {
-	color: #999;
+    color: #999;
 }
 
 .hide {
-	display: none;
+    display: none;
 }
 
 .icon.hide {
-	display: inline;
+    display: inline;
 }
 
 .highlight {
-	background: #ffc;
+    background: #ffc;
 }
 
 .top {
-	margin-top: 0;
-	padding-top: 0;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .bottom {
-	margin-bottom: 0;
-	padding-bottom: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
